fix: avoid layout shift when filtering, always show scroll bar

--- a/client/main.css
+++ b/client/main.css
@@ -4,6 +4,7 @@ body {
   background-color: white;
   color: black;
   padding-bottom: 3em;
+  overflow-y: scroll;
 }
 @media (prefers-color-scheme: dark) {
   body {
